fixed-alignment

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   height: auto;
 }
 .chef-container {
-  width: 100%;
+  width: 70%;
   margin: 0 auto;
   list-style: none;
 }
